Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82843

Crash when creating QQmlValueTypeWrapper from invalid Q_GADGET type

XMLWordPrintable

    • All
    • 5bcb2ff883f9f8ceb42ed6de298aa3036d6413b3 (qt/qtdeclarative/5.15) 008c8119ee10a453580281c16e4737efe98203e8 (qt/qtdeclarative/5.12.8)

      User type which is either not registered at all or not properly flagged as Q_GADGET, we might see the crash.

       

      #14 QMetaType::isExtended (this=0x60, flag=<optimized out>) at /usr/include/QtCore/qmetatype.h:713
      #15 QMetaType::sizeOf (this=0x60) at /usr/include/QtCore/qmetatype.h:2254
      #16 QV4::Heap::QQmlValueTypeWrapper::setValue (this=0x7f4cdb0780, value=...) at /usr/src/debug/qtdeclarative/5.12.7+gitAUTOINC+d762ea24b5-r0.2/git/src/qml/qml/qqmlvaluetypewrapper.cpp:114
      #17 0x0000007fb6cbb844 in QV4::QQmlValueTypeWrapper::create (engine=engine@entry=0x559115b2b0, value=..., metaObject=0x7f9c01f4e0 <if1qface::vehicle::systemSettings::TimeZone::staticMetaObject>, typeId=typeId@entry=11615) at /usr/src/debug/qtdeclarative/5.12.7+gitAUTOINC+d762ea24b5-r0.2/git/src/qml/qml/qqmlvaluetypewrapper.cpp:209
      #18 0x0000007fb6bf2bc4 in QV4::ExecutionEngine::fromVariant (this=this@entry=0x559115b2b0, variant=...) at /usr/src/debug/qtdeclarative/5.12.7+gitAUTOINC+d762ea24b5-r0.2/git/src/qml/jsruntime/qv4engine.cpp:1591
      #19 0x0000007fb6cbbf08 in getGadgetProperty (property=<optimized out>, valueTypeWrapper=0x7f4cdb0720, engine=0x559115b2b0) at /usr/src/debug/qtdeclarative/5.12.7+gitAUTOINC+d762ea24b5-r0.2/git/src/qml/qml/qqmlvaluetypewrapper.cpp:417
      #20 QV4::QQmlValueTypeWrapper::lookupGetter (lookup=lookup@entry=0x5599514d10, engine=engine@entry=0x559115b2b0, object=...) at /usr/src/debug/qtdeclarative/5.12.7+gitAUTOINC+d762ea24b5-r0.2/git/src/qml/qml/qqmlvaluetypewrapper.cpp:479
      #21 0x0000007fb6cbc8fc in QV4::QQmlValueTypeWrapper::virtualResolveLookupGetter (object=0x7f9a69d700, engine=0x559115b2b0, lookup=0x5599514d10) at /usr/src/debug/qtdeclarative/5.12.7+gitAUTOINC+d762ea24b5-r0.2/git/src/qml/qml/qqmlvaluetypewrapper.cpp:449

        For Gerrit Dashboard: QTBUG-82843
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            papetaja Pasi Petäjäjärvi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes