Check that value type exists before creating wrapper

Fixes: QTBUG-82843
Change-Id: I1ea4a52b33e7d318525e63346eab46ecf7a8fec0
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 5bcb2ff883f9f8ceb42ed6de298aa3036d6413b3)